--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <center>
         <p>
-            <strong>Edwaldo Almeida</strong>
+            <strong>EDWALDO ALMEIDA</strong>
         </p>
         <p>
             Software Developer
